--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,6 +8,9 @@ main:
     
   # - title: "Portfolio"
   #   url: /portfolio/
+
+  - title: "Home"
+    url: /about/
         
   - title: "Blog Posts"
     url: /year-archive/
