make author description consistent

--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Xiaodi Yuan"
   avatar           : "xiaodi-profile.jpg"
-  bio              : "Senior undergrad @ Tsinghua"
+  bio              : "Senior undergrad at Tsinghua"
   location         : # "Location"
   employer         :
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
