--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,8 +12,8 @@ main:
   - title: "Home"
     url: /about/
         
-  - title: "Blog Posts"
-    url: /year-archive/
+  # - title: "Blog Posts"
+  #   url: /year-archive/
 
   - title: "Publications"
     url: /publications/
