--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Ada Yuan's Homepage"
+title                    : "Xiaodi Ada Yuan's Homepage"
 title_separator          : "-"
 name                     : &name "Xiaodi \"Ada\" Yuan"
 description              : &description "PhD student @ UCSD"
