--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,7 +1,7 @@
 # Authors
 
 Name Name:
-  name        : "Xiaodi Yuan"
+  name        : "Xiaodi Ada Yuan"
   uri         : "https://rabbit-hu.github.io/"
   email       : "yuanxiaodidl@gmail.com"
   bio         : 
