--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,6 +17,9 @@ main:
 
   - title: "Publications"
     url: /publications/
+
+  - title: "Projects"
+    url: /projects/
     
   - title: "CV"
     url: /cv/
